--- a/exercises/exercise4/values.yaml
+++ b/exercises/exercise4/values.yaml
@@ -31,7 +31,7 @@ rabbitmq:
     password: 'guest'
     erlangCookie: 'CfRrIxhHEZk0XUh9LdwDJTWa6woVEush'
   extraConfiguration: |-
-    default_vhost = default-vhost
+    default_vhost = /
     default_permissions.configure = .*
     default_permissions.read = .*
     default_permissions.write = .*
@@ -81,8 +81,6 @@ producer:
       value: "guest"
     - name: SIGNAL_TYPE
       value: "sine"
-    - name: RABBITMQ_VHOST
-      value: "default-vhost"
   fullnameOverride: ""
   image:
     repository: # TODO
