--- a/exercises/exercise3/consumer.conf
+++ b/exercises/exercise3/consumer.conf
@@ -1,6 +1,6 @@
 rabbitmq_port=5672
-rabbitmq_vhost=default-vhost
-rabbitmq_exchange=exercise
+rabbitmq_vhost=/
+rabbitmq_exchange=sine
 rabbitmq_queue=exercise
 influxdb_bucket=primary
 influxdb_org=primary
