--- a/demos/helm/demonstrator/templates/functions.yaml
+++ b/demos/helm/demonstrator/templates/functions.yaml
@@ -1,7 +1,5 @@
-1: {{ hello }}
+1: {{ "hello" }}
 
-2: {{ quote hello }}
+2: {{ 3 | toString | quote }}
 
-3: {{ 3 | toString | quote }}
-
-4: {{ default "Does not exist." .Values.nothing }}
+3: {{ default "Does not exist." .Values.nothing }}
